# images-aligner

./: CMakeLists.txt  LICENSE  README.md  vcpkg.json
include/: feature_descriptor.h  feature_matcher.h  image.h  images_aligner.h  images_aligner_exception.h  images_collection.h  position.h
src/: feature_descriptor.cpp  feature_matcher.cpp  images_aligner.cpp  images_aligner_exec.cpp  images_collection.cpp
test/: CMakeLists.txt  feature_descriptor_test.cpp  images_aligner_test.cpp  images_collection_test.cpp
